# faq

./: Cargo.toml  README.md  highlight.css  index.html  style.css
.github/workflows/: check.yml  deploy.yml
content/: async-fn-in-trait.md  await-multiple-futures.md  binary-size.md  common-ide.md  debug-build-slow.md  error-handling.md  fn-pointer-fn-trait.md  format-macro.md  future-poll-perf.md  futures-rel.md  generic-primitive-num.md  glossary.toml  heap-new.md  new-vec-ptr-addr.md  static-lifetime-bound-var.md  static-variable-and-static-lifetime.md  trait-obj-upcast.md  vec-new-ptr.md  where-to-find-crates.md
res/: index.html.hbs  style.css
src/: entry_renderer.rs  entry_writer.rs  main.rs
