[package]
name = "rust-zh-faq"
version = "0.1.0"
authors = ["Xidorn Quan <me@upsuper.org>"]
edition = "2018"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
anyhow = "1.0.32"
glob = "0.3.0"
handlebars = "3.4.0"
pulldown-cmark = "0.8.0"
serde = { version = "1.0.115", features = ["derive"] }
v_htmlescape = "0.11.0"
syntect = "4.4.0"
once_cell = "1.4.1"
toml = "0.5.7"
